--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    
 <head>
     <meta charset="utf-8">
     <title>San Joaquin Valley Town Hall</title>
